...
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <Button
        android:id="@+id/startGame1PlayerButton"
        style="@style/button"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:drawableTop="@drawable/outline_smart_toy_24"
        android:text="@string/_1player"
        android:textAlignment="center"
        android:textSize="12sp" />

      <Button
        android:id="@+id/startGame2PlayerButton"
        style="@style/button"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/button_background"
        android:drawableTop="@drawable/outline_group_24"
...
