...
  <string name="time">Время</string>
  <string name="pause">Пауза</string>
  <string name="turn">Ход</string>
  <string name="menu">В меню</string>
  <string name="pass">Пропуск</string>
  <string name="tip">Помощь</string>
  <string name="bot">Бот 🤖</string>
  <string name="yes">Да</string>
  <string name="no">Нет</string>
  <string name="ok">Ок</string>
  <string name="resumeSavedGamePrompt">У вас есть незавершённая игра в этом режиме. Хотите продолжить?</string>
  <string name="passTurnPrompt">Вы точно хотите завершить свой ход?</string>
  <string name="exitToMenuPrompt">Вы точно хотите выйти в меню?</string>
...
